--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title ng-bind="PageTitle" ng-cloak>asd</title>
+    <title ng-bind="PageTitle" ng-cloak></title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-rtl.css" rel="stylesheet">
     <link href="css/loading-bar.css" rel="stylesheet">
